--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <!--Company 1-->
                 <div>
                     <h4 class="work-position">Safety Engineer <span class="organization">Foxtrot</span></h4>
-                    <p class="period">December 2021 - Agust 2022 <span class="line">|</span> Country</p>
+                    <p class="period">December 2021 - Agust 2022 <span class="line">|</span> Ukraine</p>
                     <ul class="work-list">
                         <li class="work-item">Exercitatio introductoria in tutelam et incendium laboris salutem.
 
@@ -84,7 +84,7 @@
                 <!--Company 2-->
                 <div>
                     <h4 class="work-position">Safety Engineer <span class="organization">Ukrposhta</span></h4>
-                    <p class="period">February 2020 - February 2021 <span class="line">|</span> Country</p>
+                    <p class="period">February 2020 - February 2021 <span class="line">|</span> Ukraine</p>
                     <ul class="work-list">
                         <li class="work-item">Exercitatio introductoria in tutelam et incendium laboris salutem.
 
@@ -107,7 +107,7 @@
                 <!--Company 3-->
                 <div>
                     <h4 class="work-position">Laboratory assistant <span class="organization">Kiyvvodokanal</span></h4>
-                    <p class="period">December 2018 - January 2020 <span class="line">|</span> Country</p>
+                    <p class="period">December 2018 - January 2020 <span class="line">|</span> Ukraine</p>
                     <ul class="work-list">
                         <li class="work-list-item">
                             Aquae qualitas et salus investigatio secundum modos probatos.
@@ -124,10 +124,10 @@
                     <h3 class="title">Education</h3>
                     <h5 class="education-hige-school">INSTITUTE OF AGROECOLOGY AND NATURE MANAGEMENT NAAS</h5>
                     <h6 class="speciality">Postgraduate - Agricultural sciences</h6>
-                    <p class="period">October 2015 - October 2018 <span class="line">|</span> Country</p>
+                    <p class="period">October 2015 - October 2018 <span class="line">|</span> Ukraine</p>
                     <h5 class="education-hige-school">National University of Food Technology</h5>
                     <h6 class="speciality">Ecology and environmental protection</h6>
-                    <p class="period">September 2011 - June 2015 <span class="line">|</span> Country</p>
+                    <p class="period">September 2011 - June 2015 <span class="line">|</span> Ukraine</p>
                 </div>
             </div>
         </div>
