--- a/index.html
+++ b/index.html
@@ -25,14 +25,12 @@
 
             <div class="about">
 
-                <h2 class="about-position">Front-End Developer</h2>
+                <h2 class="about-position">Juniour QA Engineer</h2>
 
                 <h1 class="about-name">Volodymyr Havliuk</h1>
 
-                <p class="about-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.
-                    Quis ipsum suspendisse ultrices gravida.
-                    Risus commodo viverra maecenas accumsan lacus vel facilisis.
+                <p class="about-description">I`m enthusiastic and detail-oriented It Research
+                seeking an entry-level position with Company to use my skills in search communication in speciality social sites.
                 </p>
 
             </div>
@@ -60,62 +58,85 @@
                 <h3 class="title">Work Expirience</h3>
                 <!--Company 1-->
                 <div>
-                    <h4 class="work-position">Safety Engineer <span class="organization">Foxtrot</span></h4>
-                    <p class="period">December 2021 - Agust 2022 <span class="line">|</span> Ukraine</p>
+                    <h4 class="work-position">Safety Engineer <span class="organization">Specialized school № 173</span></h4>
+                    <p class="period">October 2022 - now <span class="line">|</span> Ukraine</p>
                     <ul class="work-list">
-                        <li class="work-item">Exercitatio introductoria in tutelam et incendium laboris salutem.
+                        <li class="work-item">Introductory training in occupational safety and fire protection.
 
                         </li>
-                        <li class="work-item">Reporting ad state organization.
+                        <li class="work-item">Reporting to the state organization.
 
                         </li>
-                        <li class="work-item">Praeparatio praescriptionum et defectuum eliminatio.
+                        <li class="work-item">Preparation of prescriptions and elimination of defects.
 
                         </li>
-                        <li>Moderatio obsequii cum legislativo actorum praesidio in unitatibus incepti laboris est.
+                        <li>The control of compliance with legislative acts is the protection of work units.
 
                         </li>
                         <li>
-                            Participatio progressionis institutionis progressionis, institutio et educatio ministrorum
-                            ac curatorum in rebus occupationibus salutis et salutis.
+                            Participation in the development of educational programs, training and education of employees
+                            and of those who are responsible for the occupations of health and safety.
                         </li>
                     </ul>
                 </div>
                 <!--Company 2-->
                 <div>
-                    <h4 class="work-position">Safety Engineer <span class="organization">Ukrposhta</span></h4>
-                    <p class="period">February 2020 - February 2021 <span class="line">|</span> Ukraine</p>
+                    <h4 class="work-position">Safety Engineer <span class="organization">Foxtrot</span></h4>
+                    <p class="period">December 2021 - Agust 2022 <span class="line">|</span> Ukraine</p>
                     <ul class="work-list">
-                        <li class="work-item">Exercitatio introductoria in tutelam et incendium laboris salutem.
+                        <li class="work-item">Introductory training in occupational safety and fire protection.
 
                         </li>
-                        <li class="work-item">Reporting ad state organization.
+                        <li class="work-item">Reporting to the state organization.
 
                         </li>
-                        <li class="work-item">Praeparatio praescriptionum et defectuum eliminatio.
+                        <li class="work-item">Preparation of prescriptions and elimination of defects.
 
                         </li>
-                        <li>Moderatio obsequii cum legislativo actorum praesidio in unitatibus incepti laboris est.
+                        <li>The control of compliance with legislative acts is the protection of work units.
 
                         </li>
                         <li>
-                            Participatio progressionis institutionis progressionis, institutio et educatio ministrorum
-                            ac curatorum in rebus occupationibus salutis et salutis.
+                            Participation in the development of educational programs, training and education of employees
+                            and of those who are responsible for the occupations of health and safety.
                         </li>
                     </ul>
                 </div>
                 <!--Company 3-->
                 <div>
+                    <h4 class="work-position">Safety Engineer <span class="organization">Ukrposhta</span></h4>
+                    <p class="period">February 2020 - February 2021 <span class="line">|</span> Ukraine</p>
+                    <ul class="work-list">
+                        <li class="work-item">Introductory training in occupational safety and fire protection.
+
+                        </li>
+                        <li class="work-item">Reporting to the state organization.
+
+                        </li>
+                        <li class="work-item">Preparation of prescriptions and elimination of defects.
+
+                        </li>
+                        <li>The control of compliance with legislative acts is the protection of work units.
+
+                        </li>
+                        <li>
+                            Participation in the development of educational programs, training and education of employees
+                            and of those who are responsible for the occupations of health and safety.
+                        </li>
+                    </ul>
+                </div>
+                <!--Company 4-->
+                <div>
                     <h4 class="work-position">Laboratory assistant <span class="organization">Kiyvvodokanal</span></h4>
                     <p class="period">December 2018 - January 2020 <span class="line">|</span> Ukraine</p>
                     <ul class="work-list">
                         <li class="work-list-item">
-                            Aquae qualitas et salus investigatio secundum modos probatos.
+                            Water quality and safety research according to proven methods.
                         </li>
                         <li class="work-list-item">
-                            Determinatio indicibus physicochemicis et indicibus salus: alcalinitas, duritia, contentum
-                            dioxidum carbonii, oxidizability et oxygeni contentus; massa fractio nitratis, nitritum,
-                            chloridi, chlorini, ammoniaci, ferri, aluminii.
+                            Determination of physicochemical indicators and health indicators: alkalinity, hardness, content
+                            carbon dioxide, oxidizability and oxygen content; mass fraction of nitrate, nitrite,
+                            chloride, chlorine, ammonia, iron, aluminum.
                         </li>
                     </ul>
                 </div>
