--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
                 <h1 class="about-name">Volodymyr Havliuk</h1>
 
-                <p class="about-description">I`m enthusiastic and detail-oriented It Research
-                seeking an entry-level position with Company to use my skills in search communication in speciality social sites.
+                <p class="about-description">I`m enthusiastic and detail-oriented Junior QA Engineer seeking an entry-level 
+                    position with Company to use my skills in testing products and research bags and help to fix them.
                 </p>
 
             </div>
